label textoverflow fixed

--- a/css/menupage.css
+++ b/css/menupage.css
@@ -1250,6 +1250,10 @@ a {
     .starline2 {
         width: 85%;
         font-size: 14px;
+        display: block;
+        text-overflow:hidden;
+        white-space: nowrap;
+        overflow: hidden;
     }
 
     .starline3 {
@@ -1279,6 +1283,7 @@ a {
         border-radius: 15px;
         padding-left: 3%;
         margin-bottom: -20%;
+        overflow: hidden;
 
 
     }
